# uhf_rfid_sdk

./: .gitignore  README.md  pyproject.toml  setup.py
doc/: api_reference.md  blockDia.mmd  index.md  installation.md  parameters.md  protocols.md  quickstart.md  transport.md  troubleshooting.md
doc/examples/: README.md  README_BG.md  example_connect_read.py  example_memory_ops.py  example_parameters.py
doc/examples/cph/: 01_connection.py  02_device_control.py  03_inventory.py  04_simple_params.py  05_tag_memory.py  06_tag_lock.py  07_rtc.py  08_complex_params.py  09_misc.py
doc/examples/utils/: scan_ports.py
examples/: identify_tag_example.py
tests/core/: test_dispatcher.py  test_reader.py
tests/protocols/: test_framing.py
tests/protocols/cph/: test_commands_device.py  test_cph_protocol.py  test_tlv.py
tests/utils/: test_tag_utils.py
uhf_rfid/: __init__.py
uhf_rfid/core/: __init__.py  dispatcher.py  exceptions.py  reader.py  status.py
uhf_rfid/protocols/: __init__.py  base_protocol.py  framing.py  registry.py
uhf_rfid/protocols/cph/: __init__.py  commands_device.py  commands_misc.py  commands_params.py  commands_tags.py  constants.py  parameters.py  protocol.py  tlv.py
uhf_rfid/transport/: __init__.py  base.py  mock.py  serial_async.py  tcp_async.py
uhf_rfid/utils/: serial_scanner.py  tag_definitions.json  tag_utils.py
